--- a/project/ansible/blnc.yaml
+++ b/project/ansible/blnc.yaml
@@ -6,6 +6,21 @@
       ansible.builtin.import_role:
         name: common-config-docker
 
+    # --- Config firewalld
+
+    - name: Move eth2 to external zone
+      ansible.builtin.shell: "firewall-cmd --zone=external --change-interface=eth2 --permanent"
+
+    - name: Move eth1 to dmz zone
+      ansible.builtin.shell: "firewall-cmd --zone=dmz --change-interface=eth1 --permanent"
+
+    - name: Reload firewalld
+      ansible.builtin.service:
+        name: firewalld
+        state: reloaded
+
+    # ---
+
     - name: Copy nginx config file
       ansible.builtin.copy:
         src: "nginx.conf"
