--- a/project/ansible/fw.yaml
+++ b/project/ansible/fw.yaml
@@ -6,3 +6,32 @@
     - name: Install common
       ansible.builtin.import_role:
         name: common-config
+
+    # --- Config firewalld
+
+    - name: Move eth1 to drop zone
+      ansible.builtin.shell: "firewall-cmd --zone=drop --change-interface=eth1 --permanent"
+
+    - name: Add app servers to trusted zone
+      ansible.posix.firewalld:
+        source: "{{ item }}"
+        zone: trusted
+        state: enabled
+        permanent: true
+      with_items:
+        - 192.168.1.31
+
+    - name: Move eth2 to internal zone
+      ansible.builtin.shell: "firewall-cmd --zone=internal --change-interface=eth2 --permanent"
+
+    - name: Enable masquerade for internal zone
+      ansible.posix.firewalld:
+        masquerade: true
+        state: enabled
+        permanent: true
+        zone: internal
+
+    - name: Reload firewalld
+      ansible.builtin.service:
+        name: firewalld
+        state: reloaded
