--- a/project/ansible/firewalld-internal-config.yaml
+++ b/project/ansible/firewalld-internal-config.yaml
@@ -24,7 +24,7 @@
         - nfs
         - rpc-bind
         - mountd
-      when: ansible_hostname == "fs"
+      when: ansible_hostname == "nfs"
 
     - name: Reload firewalld
       ansible.builtin.service:
