--- a/project/ansible/nfsc.yaml
+++ b/project/ansible/nfsc.yaml
@@ -2,6 +2,7 @@
   hosts: apps
   become: true
   vars:
+    project_dir: /opt/cms
     data_dir: /opt/cms/data
     nfs_server_ip: "10.10.1.142"
     nfs_server_data_dir: /opt/cms/data
@@ -13,9 +14,29 @@
           - nfs4-acl-tools
         state: present
 
+    - name: Umount old NFS volume
+      ansible.posix.mount:
+        src: "{{ nfs_server_ip }}:{{ nfs_server_data_dir }}"
+        path: "{{ data_dir }}"
+        state: absent
+
+    - name: Remove old data
+      ansible.builtin.file:
+        path: "{{ data_dir }}"
+        state: absent
+
     - name: Mount an NFS volume
       ansible.posix.mount:
         src: "{{ nfs_server_ip }}:{{ nfs_server_data_dir }}"
         path: "{{ data_dir }}"
         state: mounted
         fstype: nfs
+
+    - name: Restarted web service
+      community.docker.docker_compose:
+        project_src: "{{ project_dir }}"
+        state: present
+        restarted: true
+        services:
+          - web
+
