--- a/project/ansible/provision.yaml
+++ b/project/ansible/provision.yaml
@@ -3,6 +3,8 @@
 - import_playbook: "database.yaml"
 - import_playbook: "fw.yaml"
 - import_playbook: "barman.yaml"
+- import_playbook: "borg-server.yaml"
 - import_playbook: "nfs.yaml"
+- import_playbook: "borg-client.yaml"
 - import_playbook: "app.yaml"
 - import_playbook: "blnc.yaml"
