dev: init observer

--- a/project/Vagrantfile
+++ b/project/Vagrantfile
@@ -54,6 +54,12 @@ MACHINES = {
       { ip: "192.168.56.142", adapter: 8 },
     ],
   },
+  obs: {
+    networks: [
+      { ip: "10.10.1.143",    adapter: 2, netmask: "255.255.255.0", virtualbox__intnet: "internal"},
+      { ip: "192.168.56.143", adapter: 8 },
+    ],
+  },
 }
 
 
