--- a/project/ansible/fw.yaml
+++ b/project/ansible/fw.yaml
@@ -12,6 +12,13 @@
     - name: Move eth1 to drop zone
       ansible.builtin.shell: "firewall-cmd --zone=drop --change-interface=eth1 --permanent"
 
+    - name: Enable masquerade for drop zone
+      ansible.posix.firewalld:
+        masquerade: true
+        state: enabled
+        permanent: true
+        zone: drop
+
     - name: Add app servers to trusted zone
       ansible.posix.firewalld:
         source: "{{ item }}"
