--- a/project/ansible/roles/common-config-docker/tasks/main.yaml
+++ b/project/ansible/roles/common-config-docker/tasks/main.yaml
@@ -11,9 +11,32 @@
     docker_users:
       - vagrant
 
+- name: Check docker daemon config
+  ansible.builtin.stat:
+    path: /etc/docker/daemon.json
+  register: st
+
+- name: Create docker daemon config if not exists
+  ansible.builtin.copy:
+    src: files/docker-daemon.json
+    dest: /etc/docker/daemon.json
+    mode: "0644"
+  when: not st.stat.exists
+
+- name: Reload docker
+  ansible.builtin.service:
+    name: docker
+    state: reloaded
+  when: not st.stat.exists
+
+- name: Restart docker
+  ansible.builtin.service:
+    name: docker
+    state: restarted
+  when: not st.stat.exists
+
 - name: Install python packages
   pip:
     name:
       - docker
       - docker-compose
-
