dev: prometheus config, install docker on all hosts

--- a/project/ansible/barman.yaml
+++ b/project/ansible/barman.yaml
@@ -9,7 +9,7 @@
   tasks:
     - name: Install common
       ansible.builtin.import_role:
-        name: common-config
+        name: common-config-docker
 
     # --- Config firewalld
 
