--- a/project/ansible/firewalld-fw-config.yaml
+++ b/project/ansible/firewalld-fw-config.yaml
@@ -6,6 +6,13 @@
     - name: Move eth1 to drop zone
       ansible.builtin.shell: "firewall-cmd --zone=drop --change-interface=eth1 --permanent"
 
+    - name: Enable masquerade for drop zone
+      ansible.posix.firewalld:
+        masquerade: true
+        state: enabled
+        permanent: true
+        zone: drop
+
     - name: Add app servers to trusted zone
       ansible.posix.firewalld:
         source: "{{ item }}"
@@ -13,7 +20,9 @@
         state: enabled
         permanent: true
       with_items:
+        - 192.168.1.10
         - 192.168.1.31
+        - 192.168.1.32
 
     - name: Move eth2 to internal zone
       ansible.builtin.shell: "firewall-cmd --zone=internal --change-interface=eth2 --permanent"
