--- a/project/Vagrantfile
+++ b/project/Vagrantfile
@@ -78,6 +78,8 @@ Vagrant.configure("2") do |config|
         box.vm.network "private_network", **ipconf
       end
 
+      # --- НЕ запускаем автоматом, т.к. плейбук отрабатывает, если поднять
+      #     одну ВМ obs
       # # --- ansible запускаем после запуска всех машин из MACHINES
       # #     для запуска индивидуальных плейбуков необходимо использовать
       # #     команду:
@@ -87,6 +89,7 @@ Vagrant.configure("2") do |config|
       #     ansible.playbook = "ansible/provision.yaml"
       #     ansible.inventory_path = "ansible/hosts"
       #     ansible.host_key_checking = "false"
+      #     ansible.vault_password_file = "ansible/vault_pass"
       #     ansible.limit = "all"
       #   end
       # end
