--- a/project/ansible.cfg
+++ b/project/ansible.cfg
@@ -2,6 +2,7 @@
 connection = smart
 timeout = 60
 deprecation_warnings = False
+vault_password_file = ansible/vault_pass
 host_key_checking = False
 [ssh_connection]
 ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null -o IdentitiesOnly=yes
