--- a/project/ansible/fw.yaml
+++ b/project/ansible/fw.yaml
@@ -5,7 +5,7 @@
   tasks:
     - name: Install common
       ansible.builtin.import_role:
-        name: common-config-docker
+        name: common-config
 
     # --- Config firewalld
 
