--- a/project/ansible/barman.yaml
+++ b/project/ansible/barman.yaml
@@ -262,3 +262,15 @@
         job: "barman cron && barman backup db1"
       become_user: barman
       when: (ansible_hostname == "fs")
+
+- name: Run exporters
+  hosts: barman
+  become: true
+  tasks:
+    - name: Install edge duckprom node
+      ansible.builtin.import_role:
+        name: nmix.duckprom
+      vars:
+        duckprom_dir: /opt/duckprom
+        duckprom_grafana_host: 10.10.1.143
+        duckprom_basic_auth_enabled: false
