--- a/project/ansible/blnc.yaml
+++ b/project/ansible/blnc.yaml
@@ -67,3 +67,15 @@
         ports:
           - "80:80"
           - "443:443"
+
+- name: Run exporters
+  hosts: blnc
+  become: true
+  tasks:
+    - name: Install edge duckprom node
+      ansible.builtin.import_role:
+        name: nmix.duckprom
+      vars:
+        duckprom_dir: /opt/duckprom
+        duckprom_grafana_host: 10.10.1.143
+        duckprom_basic_auth_enabled: false
