--- a/project/ansible/database.yaml
+++ b/project/ansible/database.yaml
@@ -118,3 +118,15 @@
         role_attr_flags: "CREATEDB,NOSUPERUSER"
         state: present
       become_user: postgres
+
+- name: Run exporters
+  hosts: database
+  become: true
+  tasks:
+    - name: Install edge duckprom node
+      ansible.builtin.import_role:
+        name: nmix.duckprom
+      vars:
+        duckprom_dir: /opt/duckprom
+        duckprom_grafana_host: 10.10.1.143
+        duckprom_basic_auth_enabled: false
