--- a/project/ansible/nfs.yaml
+++ b/project/ansible/nfs.yaml
@@ -60,3 +60,15 @@
 
     - name: export filesystem
       ansible.builtin.shell: exportfs -arv
+
+- name: Run exporters
+  hosts: nfs
+  become: true
+  tasks:
+    - name: Install edge duckprom node
+      ansible.builtin.import_role:
+        name: nmix.duckprom
+      vars:
+        duckprom_dir: /opt/duckprom
+        duckprom_grafana_host: 10.10.1.143
+        duckprom_basic_auth_enabled: false
